Without api_key

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_KEY='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'
+API_KEY=''
